@@ -131,6 +131,7 @@ import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.asAddress;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.asAddressArray;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.asByteArray;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.asLongArray;
+import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.nextBytes;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.nftAmount;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.to32BytesString;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -171,7 +172,6 @@ import lombok.CustomLog;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.apache.commons.lang3.RandomUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 
 @CustomLog
@@ -243,8 +243,8 @@ public class EstimatePrecompileFeature extends AbstractEstimateFeature {
 
     @Given("I mint and verify a new nft")
     public void mintNft() {
-        tokenClient.mint(nonFungibleTokenId, RandomUtils.nextBytes(4));
-        networkTransactionResponse = tokenClient.mint(nonFungibleKycUnfrozenTokenId, RandomUtils.nextBytes(4));
+        tokenClient.mint(nonFungibleTokenId, nextBytes(4));
+        networkTransactionResponse = tokenClient.mint(nonFungibleKycUnfrozenTokenId, nextBytes(4));
     }
 
     @Then("the mirror node REST API should return status {int} for the HAPI transaction")
@@ -656,7 +656,7 @@ public class EstimatePrecompileFeature extends AbstractEstimateFeature {
 
     @And("I mint a new NFT and approve second receiver account to all serial numbers")
     public void mintAndApproveAllSerialsToSecondReceiver() {
-        tokenClient.mint(nonFungibleTokenId, RandomUtils.nextBytes(4));
+        tokenClient.mint(nonFungibleTokenId, nextBytes(4));
         accountClient.approveNftAllSerials(nonFungibleTokenId, receiverAccount.getAccountId());
         networkTransactionResponse =
                 accountClient.approveNftAllSerials(nonFungibleTokenId, secondReceiverAccount.getAccountId());
@@ -668,7 +668,7 @@ public class EstimatePrecompileFeature extends AbstractEstimateFeature {
                 ESTIMATE_PRECOMPILE,
                 TRANSFER_NFTS,
                 asAddress(nonFungibleTokenId),
-                asAddressArray(Arrays.asList(admin.getAccountId().toSolidityAddress())),
+                asAddressArray(List.of(admin.getAccountId().toSolidityAddress())),
                 asAddressArray(Arrays.asList(
                         receiverAccountAlias,
                         secondReceiverAccount.getAccountId().toSolidityAddress())),
@@ -1911,7 +1911,7 @@ public class EstimatePrecompileFeature extends AbstractEstimateFeature {
     @Then("I call estimateGas with mintToken function for NFT and verify the estimated gas against HAPI")
     public void executeMintNonFungibleWithLimitedGas() {
         var data = encodeDataToByteArray(
-                ESTIMATE_PRECOMPILE, MINT_NFT, asAddress(nonFungibleTokenId), 0L, asByteArray(Arrays.asList("0x02")));
+                ESTIMATE_PRECOMPILE, MINT_NFT, asAddress(nonFungibleTokenId), 0L, asByteArray(List.of("0x02")));
         var estimateGasValue = validateAndReturnGas(data, MINT_NFT, estimatePrecompileContractSolidityAddress);
         executeContractTransaction(deployedEstimatePrecompileContract, estimateGasValue, MINT_NFT, data);
     }
